pixer-app/templates/booksfinder-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booksfinder
spec:
  selector:
    matchLabels:
      app: booksfinder
  template:
    metadata:
      labels:
        app: booksfinder
    spec:
      containers:
      - name: booksfinder
        image: monyslim/booksfinder:1
        ports:
        - containerPort: 80
