pixer-app/templates/booksfinder-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: booksfinder-service
spec:
  selector:
    app: booksfinder
  ports:
  - port: 80
    targetPort: 80
