pixer-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixer-app-service
spec:
  selector:
    app: pixer-fix
  ports:
  - port: 830
    targetPort: 80
