pixer-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    name: myingress
spec:
  rules:
  - host: monyslim.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pixer-app-service
            port: 
              number: 80
  - host: booksfinder.monyslim.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: booksfinder-service
            port: 
              number: 80
